// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > displays with search button 1`] = `
<DocumentFragment>
  <div
    class="sc-jSFipO dlBeDT aje-input__search aje-input--default is-medium"
  >
    <label
      class="sc-gtsqUy hMTsbS aje-label aje-label"
      for="react-aria-:r5:"
      id="react-aria-:r6:"
    >
      search
    </label>
    <div
      class="sc-kEqXeH bMTNHH"
    >
      <input
        aria-labelledby="react-aria-:r6:"
        class="sc-iqAbyq iqkqU"
        id="react-aria-:r5:"
        type="search"
        value=""
      />
      <button
        class="sc-fnVZQs sc-fFSPgy eZZpUo eqmwBm aje-btn aje-btn--icon aje-btn--content"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-hBMVwJ ktTEon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > displays without button 1`] = `
<DocumentFragment>
  <div
    class="sc-jSFipO dlBeDT aje-input__search aje-input--default is-medium"
  >
    <label
      class="sc-gtsqUy hMTsbS aje-label aje-label"
      for="react-aria-:r0:"
      id="react-aria-:r1:"
    >
      search
    </label>
    <div
      class="sc-kEqXeH bMTNHH"
    >
      <input
        aria-labelledby="react-aria-:r1:"
        class="sc-iqAbyq iqkqU"
        id="react-aria-:r0:"
        type="search"
        value=""
      />
      <button
        class="sc-fnVZQs sc-fFSPgy eZZpUo eqmwBm aje-btn aje-btn--icon aje-btn--content"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-hBMVwJ ktTEon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
